@@ -1,6 +1,7 @@
-package dev.twice.antirelog.manager;
+package dev.twice.antirelog.managers;
 
 import lombok.RequiredArgsConstructor;
+import lombok.experimental.FieldDefaults;
 import org.bukkit.Bukkit;
 import org.bukkit.boss.BarColor;
 import org.bukkit.boss.BarStyle;
@@ -9,57 +10,48 @@ import org.bukkit.entity.Player;
 import dev.twice.antirelog.config.Settings;
 import dev.twice.antirelog.util.Utils;
 
-import java.util.HashMap;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.Map;
 import java.util.WeakHashMap;
 
-@RequiredArgsConstructor
-public class BossbarManager {
+import static lombok.AccessLevel.PRIVATE;
 
-    private final Map<Integer, BossBar> bossBars = new HashMap<>();
-    private final Map<Player, BossBar> activePlayerBars = new WeakHashMap<>();
-    private final Settings settings;
+@RequiredArgsConstructor
+@FieldDefaults(level = PRIVATE, makeFinal = true)
+public final class BossbarManager {
+
+    Map<Integer, BossBar> bossBars = new ConcurrentHashMap<>();
+    Map<Player, BossBar> activePlayerBars = new WeakHashMap<>();
+    Settings settings;
 
     public void createBossBars() {
         clearBossbars();
 
-        if (settings.getPvpTime() <= 0) {
-            return;
-        }
+        if (settings.getPvpTime() <= 0) return;
 
         String titleTemplate = settings.getMessages().getInPvpBossbar();
-        if (titleTemplate == null || titleTemplate.isEmpty()) {
-            return;
-        }
+        if (titleTemplate == null || titleTemplate.isEmpty()) return;
 
         double progressIncrement = 1.0 / settings.getPvpTime();
-        double currentProgress = 0;
 
         for (int timeRemaining = 1; timeRemaining <= settings.getPvpTime(); timeRemaining++) {
-            currentProgress = (double) timeRemaining * progressIncrement;
-
+            double currentProgress = (double) timeRemaining * progressIncrement;
             String formattedTitle = Utils.color(Utils.replaceTime(titleTemplate, timeRemaining));
 
             BossBar bossBar = Bukkit.createBossBar(formattedTitle, BarColor.RED, BarStyle.SOLID);
-            bossBar.setProgress(Math.min(Math.max(currentProgress, 0.0), 1.0));
+            bossBar.setProgress(Math.clamp(currentProgress, 0.0, 1.0));
 
             bossBars.put(timeRemaining, bossBar);
         }
     }
 
     public void setBossBar(Player player, int timeRemaining) {
-        if (player == null || !player.isOnline()) {
-            return;
-        }
+        if (player == null || !player.isOnline()) return;
 
         BossBar oldBar = activePlayerBars.remove(player);
-        if (oldBar != null) {
-            oldBar.removePlayer(player);
-        }
+        if (oldBar != null) oldBar.removePlayer(player);
 
-        if (timeRemaining <= 0) {
-            return;
-        }
+        if (timeRemaining <= 0) return;
 
         BossBar newBar = bossBars.get(timeRemaining);
         if (newBar != null) {
@@ -69,26 +61,29 @@ public class BossbarManager {
     }
 
     public void clearBossbar(Player player) {
-        if (player == null) {
-            return;
-        }
+        if (player == null) return;
+
         BossBar currentBar = activePlayerBars.remove(player);
-        if (currentBar != null) {
-            currentBar.removePlayer(player);
-        }
+        if (currentBar != null) currentBar.removePlayer(player);
     }
 
     public void clearBossbars() {
-        for (BossBar bar : activePlayerBars.values()) {
-            if (bar != null) {
-                bar.removeAll();
-            }
-        }
+        activePlayerBars.values().forEach(bar -> {
+            if (bar != null) bar.removeAll();
+        });
         activePlayerBars.clear();
 
-        for (BossBar bar : bossBars.values()) {
-            bar.removeAll();
-        }
+        bossBars.values().forEach(BossBar::removeAll);
         bossBars.clear();
+    }
+
+    public boolean hasActiveBossbar(Player player) {
+        return activePlayerBars.containsKey(player);
+    }
+
+    public void updateBossbar(Player player, int newTimeRemaining) {
+        if (hasActiveBossbar(player)) {
+            setBossBar(player, newTimeRemaining);
+        }
     }
 }
